--- a/examples/ipynb/1_1_install_janusq.ipynb
+++ b/examples/ipynb/1_1_install_janusq.ipynb
@@ -142,24 +142,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 300/300 [00:00<00:00, 380.62it/s]\n"
+      "100%|██████████| 300/300 [00:00<00:00, 381.61it/s]\n"
      ]
     }
    ],
    "source": [
-    "# test quct\n",
+    "# test QuCT\n",
     "from janusq.data_objects.backend import LinearBackend\n",
     "from janusq.data_objects.random_circuit import random_circuits\n",
     "from janusq.analysis.vectorization import RandomwalkModel\n",
     "\n",
-    "# define a 10-qubit backend\n",
+    "# define backend\n",
     "n_qubits = 8\n",
     "n_steps = 1\n",
     "n_walks = 20\n",
     "backend = LinearBackend(n_qubits, 1)\n",
     "\n",
+    "# construct circuit dataset\n",
     "circuits = random_circuits(backend, n_circuits=300, n_gate_list=[30, 50, 100], two_qubit_prob_list=[.4], reverse=True)\n",
     "\n",
+    "# train vectorization model\n",
     "up_model = RandomwalkModel(n_steps = n_steps, n_walks = n_walks, backend = backend)\n",
     "up_model.train(circuits, multi_process=False, remove_redundancy = False)"
    ]
@@ -190,38 +192,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'011': 5, '100': 41, '001': 335, '101': 1, '010': 133, '000': 9485}, {'000': 974, '010': 12, '101': 39, '011': 115, '100': 4, '001': 8856}, {'011': 6, '110': 2, '100': 44, '001': 296, '000': 9514, '010': 136, '101': 2}, {'011': 290, '111': 1, '100': 1, '001': 24, '110': 32, '000': 615, '010': 9037}, {'101': 5, '000': 55, '010': 893, '111': 30, '011': 8445, '110': 2, '001': 570}, {'100': 4, '001': 19, '110': 30, '010': 9033, '000': 616, '111': 1, '011': 297}, {'101': 1, '110': 1, '100': 35, '001': 317, '011': 6, '010': 131, '000': 9509}, {'001': 8869, '100': 6, '111': 2, '011': 120, '101': 40, '010': 12, '000': 951}, {'101': 1, '100': 35, '001': 279, '011': 5, '010': 135, '000': 9545}, {'111': 4, '100': 9462, '001': 2, '110': 142, '010': 3, '000': 86, '101': 301}, {'110': 11, '001': 77, '100': 969, '111': 114, '000': 10, '101': 8819}, {'111': 1, '001': 2, '110': 149, '100': 9474, '010': 3, '000': 67, '101': 304}, {'101': 24, '011': 2, '111': 286, '110': 8992, '100': 612, '000': 4, '010': 80}, {'000': 1, '010': 10, '001': 7, '110': 948, '100': 62, '111': 8355, '011': 68, '101': 549}, {'011': 1, '111': 306, '110': 8966, '100': 629, '000': 3, '010': 71, '101': 24}, {'111': 6, '010': 1, '000': 77, '001': 5, '100': 9445, '110': 151, '101': 315}, {'000': 8, '011': 2, '111': 106, '001': 69, '100': 966, '110': 10, '101': 8839}, {'111': 1, '000': 81, '010': 1, '001': 2, '100': 9500, '110': 126, '101': 289}, {'101': 1, '110': 4, '100': 42, '001': 287, '011': 4, '010': 130, '000': 9532}, {'011': 114, '101': 40, '010': 16, '000': 892, '100': 2, '001': 8936}, {'101': 2, '100': 37, '001': 329, '011': 5, '010': 139, '000': 9488}, {'100': 1, '110': 27, '001': 25, '011': 300, '010': 9048, '000': 599}, {'101': 2, '110': 3, '001': 508, '000': 57, '010': 964, '111': 28, '011': 8438}, {'100': 4, '001': 27, '110': 37, '010': 9012, '000': 643, '111': 2, '011': 275}, {'100': 31, '001': 320, '011': 7, '010': 109, '000': 9533}, {'001': 8874, '100': 10, '111': 1, '011': 119, '101': 37, '010': 13, '000': 946}]\n"
+      "[{'011': 35, '101': 23, '100': 301, '001': 455, '110': 15, '000': 8575, '010': 596}, {'000': 630, '010': 50, '101': 295, '111': 20, '011': 570, '110': 2, '100': 29, '001': 8404}, {'101': 19, '011': 27, '100': 335, '001': 438, '110': 23, '010': 572, '000': 8586}, {'100': 14, '110': 318, '001': 28, '010': 8708, '000': 483, '111': 14, '011': 435}, {'101': 16, '100': 2, '110': 23, '001': 489, '011': 8450, '111': 340, '000': 27, '010': 653}, {'101': 1, '100': 24, '110': 306, '001': 29, '111': 6, '011': 443, '000': 491, '010': 8700}, {'101': 18, '110': 17, '001': 476, '100': 344, '111': 2, '011': 34, '010': 558, '000': 8551}, {'110': 3, '001': 8388, '100': 29, '010': 41, '000': 661, '101': 297, '111': 18, '011': 563}, {'101': 16, '110': 24, '100': 287, '001': 434, '111': 1, '011': 36, '000': 8618, '010': 584}, {'011': 2, '111': 28, '001': 11, '110': 560, '100': 8510, '010': 22, '000': 422, '101': 445}, {'011': 22, '111': 556, '110': 45, '001': 394, '100': 634, '000': 28, '101': 8321}, {'011': 1, '111': 26, '100': 8505, '110': 524, '001': 25, '010': 34, '000': 454, '101': 431}, {'011': 17, '111': 469, '110': 8590, '100': 472, '000': 27, '010': 400, '101': 25}, {'001': 32, '110': 635, '100': 41, '101': 449, '000': 3, '010': 31, '011': 397, '111': 8412}, {'001': 1, '110': 8627, '100': 479, '011': 15, '111': 416, '101': 21, '000': 18, '010': 423}, {'011': 2, '111': 42, '001': 18, '100': 8483, '110': 571, '101': 434, '010': 32, '000': 418}, {'010': 4, '000': 28, '110': 42, '001': 463, '100': 686, '111': 563, '011': 36, '101': 8178}, {'111': 23, '000': 442, '010': 32, '101': 474, '001': 23, '110': 571, '100': 8435}, {'101': 12, '011': 31, '110': 23, '100': 279, '001': 429, '010': 572, '000': 8654}, {'011': 564, '111': 20, '101': 322, '010': 45, '000': 652, '110': 3, '100': 25, '001': 8369}, {'011': 30, '111': 2, '110': 23, '001': 420, '100': 332, '101': 11, '010': 555, '000': 8627}, {'101': 1, '011': 495, '111': 13, '100': 23, '001': 17, '110': 290, '000': 477, '010': 8684}, {'011': 8528, '111': 278, '100': 1, '110': 25, '001': 444, '101': 16, '000': 40, '010': 668}, {'111': 14, '011': 440, '010': 8684, '000': 478, '001': 20, '100': 20, '110': 344}, {'101': 14, '110': 27, '001': 428, '100': 312, '111': 5, '011': 30, '010': 550, '000': 8634}, {'011': 585, '111': 21, '110': 4, '100': 26, '001': 8315, '010': 46, '000': 688, '101': 315}]\n"
      ]
     }
    ],
    "source": [
-    "# test readout calibration\n",
-    "from janusq.simulator.noisy_simulator import NoisySimulator\n",
+    "# test QuFEM (readout calibration)\n",
     "from janusq.data_objects.backend import LinearBackend\n",
-    "from janusq.simulator.readout_error_model import ReadoutErrorModel\n",
-    "from janusq.optimizations.readout_mitigation.fem import  EnumeratedProtocol\n",
     "from janusq.data_objects.algorithms import get_algorithm_circuits\n",
+    "from janusq.simulator.noisy_simulator import NoisySimulator\n",
+    "from janusq.simulator.readout_error_model import ReadoutErrorModel\n",
+    "from janusq.optimizations.readout_mitigation.fem import EnumeratedProtocol\n",
     "\n",
+    "# define backend and circuit\n",
     "n_qubits = 3\n",
     "backend = LinearBackend(n_qubits, 1)\n",
     "circuit = get_algorithm_circuits(n_qubits, backend, algs = ['ghz'])[0]\n",
     "\n",
+    "# simulate noisy readout\n",
     "samples = 10000\n",
-    "\n",
-    "simulator = NoisySimulator(\n",
-    "    backend, readout_error_model = ReadoutErrorModel.random_model(backend))\n",
+    "simulator = NoisySimulator(backend, readout_error_model = ReadoutErrorModel.random_model(backend))\n",
     "output_noise = simulator.execute(circuit,samples)\n",
     "\n",
-    "\n",
+    "# readout calibration\n",
     "protocol = EnumeratedProtocol(n_qubits)\n",
     "real_bstrs, circuits_protocol = protocol.gen_circuits()\n",
-    "\n",
     "all_statuscnts = [\n",
-    "    simulator.execute(cir_protocol, samples)\n",
+    "    simulator.execute(cir_protocol, samples) \n",
     "    for cir_protocol in circuits_protocol\n",
     "]\n",
-    "\n",
-    "print(all_statuscnts)\n"
+    "print(all_statuscnts)"
    ]
   },
   {
@@ -245,7 +245,7 @@
     }
    ],
    "source": [
-    "# test hyqsat calibration\n",
+    "# test HyQSAT\n",
     "from janusq.hyqsat import readCNF\n",
     "\n",
     "# input cnf flie\n",
