--- a/examples/ipynb/2_1_vectorization.ipynb
+++ b/examples/ipynb/2_1_vectorization.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "[1]: https://dl.acm.org/doi/10.1145/3613424.3614274\n",
     "\n",
-    "In the current Noisy Intermediate-Scale Quantum era, quantum circuit analysis is an essential technique for designing high-performance quantum programs. Current analysis methods exhibit either accuracy limitations or high computational complexity for obtaining precise results. To reduce this tradeoff, we propose QuCT, a unified framework for extracting, analyzing, and optimizing quantum circuits. The main innovation of QuCT is to vectorize each gate with each element, quantitatively describing the degree of the interaction with neighboring gates. Extending from the vectorization model, we can develope multiple downstream models for fidelity prediction and unitary decomposition, etc. In this tutorial, we introduce the APIs of the vectorization model of QuCT."
+    "In the current Noisy Intermediate-Scale Quantum era, quantum circuit analysis is an essential technique for designing high-performance quantum programs. Current analysis methods exhibit either accuracy limitations or high computational complexity for obtaining precise results. To reduce this tradeoff, we propose QuCT, a unified framework for extracting, analyzing, and optimizing quantum circuits. The main innovation of QuCT is to vectorize each gate with each element, quantitatively describing the degree of the interaction with neighboring gates. Extending from the vectorization model, we can develope multiple downstream models for fidelity prediction and unitary decomposition, etc. In this tutorial, we introduce the APIs of the vectorization model in QuCT."
    ]
   },
   {
@@ -68,33 +68,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     ┌───────────────────┐ ░            ░                       ░       ░      »\n",
-      "q_0: ┤ U(4π/5,7π/5,3π/5) ├─░───■────────░───────────────────────░───■───░──────»\n",
-      "     └─┬────────────────┬┘ ░   │        ░ ┌───────────────────┐ ░ ┌─┴─┐ ░      »\n",
-      "q_1: ──┤ U(π,4π/5,4π/5) ├──░───┼────■───░─┤ U(7π/5,6π/5,7π/5) ├─░─┤ X ├─░───■──»\n",
-      "       ├────────────────┤  ░ ┌─┴─┐  │   ░ └───────────────────┘ ░ └───┘ ░   │  »\n",
-      "q_2: ──┤ U(π,6π/5,2π/5) ├──░─┤ X ├──┼───░───────────────────────░───────░───┼──»\n",
-      "       └─┬────────────┬─┘  ░ └───┘┌─┴─┐ ░                       ░       ░ ┌─┴─┐»\n",
-      "q_3: ────┤ U(π/5,π,π) ├────░──────┤ X ├─░───────────────────────░───────░─┤ X ├»\n",
-      "         └────────────┘    ░      └───┘ ░                       ░       ░ └───┘»\n",
-      "«      ░       ░ \n",
-      "«q_0: ─░───────░─\n",
-      "«      ░       ░ \n",
-      "«q_1: ─░───■───░─\n",
-      "«      ░   │   ░ \n",
-      "«q_2: ─░───┼───░─\n",
-      "«      ░ ┌─┴─┐ ░ \n",
-      "«q_3: ─░─┤ X ├─░─\n",
-      "«      ░ └───┘ ░ \n",
-      "target gate: {'name': 'cx', 'qubits': [1, 3], 'params': []}\n",
-      "generate paths: {'cx,1,3'}\n"
+      "       ┌────────────────┐  ░                      ░ ┌─────────────────┐  ░ »\n",
+      "q_0: ──┤ U(3π/5,2π/5,π) ├──░──────────■───────────░─┤ U(3π/5,π/5,π/5) ├──░─»\n",
+      "     ┌─┴────────────────┴┐ ░        ┌─┴─┐         ░ └─────────────────┘  ░ »\n",
+      "q_1: ┤ U(7π/5,3π/5,9π/5) ├─░────────┤ X ├─────────░──────────────────────░─»\n",
+      "     ├───────────────────┤ ░ ┌──────┴───┴───────┐ ░ ┌──────────────────┐ ░ »\n",
+      "q_2: ┤ U(9π/5,4π/5,3π/5) ├─░─┤ U(8π/5,4π/5,π/5) ├─░─┤ U(7π/5,π/5,2π/5) ├─░─»\n",
+      "     ├───────────────────┤ ░ └──────────────────┘ ░ └──────────────────┘ ░ »\n",
+      "q_3: ┤ U(4π/5,2π/5,8π/5) ├─░──────────────────────░──────────────────────░─»\n",
+      "     └───────────────────┘ ░                      ░                      ░ »\n",
+      "«                          ░                     ░ \n",
+      "«q_0: ─────────────────────░─────────────────────░─\n",
+      "«                          ░                     ░ \n",
+      "«q_1: ─────────────────────░─────────────────────░─\n",
+      "«     ┌──────────────────┐ ░ ┌─────────────────┐ ░ \n",
+      "«q_2: ┤ U(π/5,π/10,8π/5) ├─░─┤ U(2π,2π/5,2π/5) ├─░─\n",
+      "«     └──────────────────┘ ░ └─────────────────┘ ░ \n",
+      "«q_3: ─────────────────────░─────────────────────░─\n",
+      "«                          ░                     ░ \n",
+      "target gate: {'name': 'u', 'qubits': [1], 'params': [4.39822971502571, 1.8849555921538759, 5.654866776461628]}\n",
+      "generate paths: {'u-1, parallel, u-0', 'u-1, parallel, u-0, parallel, u-2', 'u-1, parallel, u-3', 'u-1, parallel, u-0, next, u-2', 'u-1, parallel, u-0, next, cx-0-1', 'u-1', 'u-1, parallel, u-2', 'u-1, next, cx-0-1', 'u-1, next, u-2', 'u-1, parallel, u-0, parallel, u-3'}\n"
      ]
     }
    ],
    "source": [
-    "# generate a circuit\n",
     "from janusq.analysis.vectorization import walk_from_gate\n",
     "\n",
+    "# generate a backend and a circuit\n",
     "backend = GridBackend(2, 2)\n",
     "circuit = random_circuit(backend, 10, .5, False)\n",
     "print(circuit)\n",
@@ -113,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The code generates 4 paths. Each path has at most 2 steps. A step is represented as \"gate type,qubits-dependency-gate type,qubits\". For example, \"u,4-parallel-u,0-parallel-u,8\" means that a U gate on qubit 4 is executed in parallel with U gates on qubits 0 and 8. "
+    "The above code generates the example path list of a random circuit. Each path is represented as `<gate_name>-<qubit_index>[, <dependency>, <gate_name>-<qubit_index>]`. For example, `u-2, parallel, cx-0-1, parallel, u-3` means that a U gate on qubit 2 is executed in parallel with a CX gate on qubits 0, 1 and a U gate on qubit 3. "
    ]
   },
   {
@@ -134,7 +134,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 102/102 [00:00<00:00, 236.15it/s]\n"
+      "100%|██████████| 102/102 [00:00<00:00, 214.66it/s]\n"
      ]
     },
     {
@@ -158,7 +158,6 @@
     "n_walks = 100\n",
     "up_model = RandomwalkModel(n_steps = n_steps, n_walks = n_walks, backend = backend, decay= .5)\n",
     "up_model.train(circuit_dataset, multi_process=False)\n",
-    "\n",
     "print('length of the path table is', len(up_model.pathtable))"
    ]
   },
@@ -168,7 +167,7 @@
    "source": [
     "# Gate Vectorization\n",
     "\n",
-    "As mentioned above, the vectorization of a gate is performed by comparing the generated paths with a path table. In JanusQ, we provide a api to do this. Below is a example of it."
+    "As mentioned above, the vectorization of a gate is performed by comparing the generated paths with a path table. In JanusQ, we provide an API for it."
    ]
   },
   {
@@ -180,8 +179,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vector is [0.  0.  0.5 0.5 0.5 0.  0.5 0.5 0.5 1.  0.  0.  0.  0.  0.5 0.  0.  0.\n",
-      " 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.5 0.  0.  0.  0.  0.\n",
+      "vector is [0.5 0.5 0.5 0.5 0.  0.  0.5 0.  0.5 1.  0.  0.  0.5 0.  0.  0.  0.  0.\n",
+      " 0.  0.  0.  0.  0.5 0.  0.  0.  0.  0.  0.5 0.  0.  0.  0.  0.  0.  0.\n",
       " 0. ]\n"
      ]
     }
@@ -214,15 +213,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2, 3, 4, 6, 7, 8, 9, 14, 30] = [2, 30, 3, 4, 14, 6, 7, 8, 9]\n"
+      "[0, 1, 2, 3, 6, 8, 9, 12, 22, 28] = [0, 28, 1, 2, 3, 6, 22, 8, 9, 12]\n"
      ]
     }
    ],
    "source": [
+    "# validate the vectorization\n",
     "indexes = np.argwhere(vec > 0).flatten()\n",
     "generated_paths = walk_from_gate(circuit, gate, 100, 1, backend.adjlist)\n",
     "device = extract_device(gate)\n",
-    "\n",
     "print(list(indexes), '=', up_model.indices_of_paths(device, generated_paths))"
    ]
   },
@@ -243,23 +242,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     ┌───────────────────────────┐ ░                              ░ \n",
-      "q_0: ┤ U(0.098927,3.3127,5.4352) ├─░──────────────────────────────░─\n",
-      "     └┬─────────────────────────┬┘ ░ ┌──────────────────────────┐ ░ \n",
-      "q_1: ─┤ U(4.5756,9.2103,12.575) ├──░─┤ U(2.0892,0.64881,3.4141) ├─░─\n",
-      "      └─────────────────────────┘  ░ └──────────────────────────┘ ░ \n",
-      "q_2: ──────────────────────────────░──────────────────────────────░─\n",
-      "      ┌─────────────────────────┐  ░  ┌────────────────────────┐  ░ \n",
-      "q_3: ─┤ U(5.8885,1.3682,4.1983) ├──░──┤ U(2.668,3.3404,4.7849) ├──░─\n",
-      "      ├─────────────────────────┴┐ ░  └────────────────────────┘  ░ \n",
-      "q_4: ─┤ U(2.2057,0.62777,5.1927) ├─░──────────────■───────────────░─\n",
-      "      ├─────────────────────────┬┘ ░            ┌─┴─┐             ░ \n",
-      "q_5: ─┤ U(1.5275,4.0411,3.9872) ├──░────────────┤ X ├─────────────░─\n",
-      "      └─────────────────────────┘  ░            └───┘             ░ \n"
+      "      ┌──────────────────────────┐ ░                                   ░      »\n",
+      "q_0: ─┤ U(5.3992,5.2086,0.46458) ├─░───────────────────────────────■───░──────»\n",
+      "      └┬───────────────────────┬─┘ ░                               │   ░      »\n",
+      "q_1: ──┤ U(4.802,5.3146,3.443) ├───░───────────────────────────────┼───░──────»\n",
+      "      ┌┴───────────────────────┴─┐ ░ ┌──────────────────────────┐  │   ░      »\n",
+      "q_2: ─┤ U(0.67875,3.1333,2.3294) ├─░─┤ U(5.2502,1.6739,0.52743) ├──┼───░───■──»\n",
+      "     ┌┴──────────────────────────┤ ░ └──────────────────────────┘┌─┴─┐ ░   │  »\n",
+      "q_3: ┤ U(0.016824,4.0638,2.9548) ├─░─────────────────────────────┤ X ├─░───┼──»\n",
+      "     └┬─────────────────────────┬┘ ░                             └───┘ ░   │  »\n",
+      "q_4: ─┤ U(5.2491,1.8757,3.8353) ├──░──────────────■────────────────────░───┼──»\n",
+      "      ├─────────────────────────┤  ░            ┌─┴─┐                  ░ ┌─┴─┐»\n",
+      "q_5: ─┤ U(5.8717,1.4803,1.3123) ├──░────────────┤ X ├──────────────────░─┤ X ├»\n",
+      "      └─────────────────────────┘  ░            └───┘                  ░ └───┘»\n",
+      "«      ░ \n",
+      "«q_0: ─░─\n",
+      "«      ░ \n",
+      "«q_1: ─░─\n",
+      "«      ░ \n",
+      "«q_2: ─░─\n",
+      "«      ░ \n",
+      "«q_3: ─░─\n",
+      "«      ░ \n",
+      "«q_4: ─░─\n",
+      "«      ░ \n",
+      "«q_5: ─░─\n",
+      "«      ░ \n"
      ]
     }
    ],
    "source": [
+    "# reconstruct the circuit from the vector\n",
     "circuit = up_model.reconstruct(device, vec)\n",
     "print(circuit)"
    ]
