updata QuCT demo

--- a/examples/ipynb/2_2_fidelity_prediction_simulator.ipynb
+++ b/examples/ipynb/2_2_fidelity_prediction_simulator.ipynb
@@ -16,9 +16,9 @@
     "\n",
     "JanusQ enables an accurate fidelity prediction by considering the gate-dependent error (e.g. crosstalk and pulse distortion). Specifially, JanusQ uses a vectorization model to extract the topological and contextual information of circuits and intergate this information into the prediction. \n",
     "\n",
-    "In this notebook, we introduce the fidelity prediction on the simulator. We also introduce the prediction on ther real world quantum device in the \"[2-3.fidelity_prediction_realqc.ipynb][2]\"\n",
+    "In this notebook, we introduce the fidelity prediction on the simulator. We also introduce the prediction on ther real world quantum device in the \"[2_3_fidelity_prediction_realqc.ipynb][2]\"\n",
     "\n",
-    "[2]: ./2-3.fidelity_prediction_realqc.ipynb\n"
+    "[2]: ./2_3_fidelity_prediction_realqc.ipynb\n"
    ]
   },
   {
@@ -49,18 +49,14 @@
     "import ray\n",
     "ray.init(log_to_driver=False)\n",
     "\n",
+    "from janusq.data_objects.random_circuit import random_circuits\n",
+    "from janusq.data_objects.backend import  LinearBackend\n",
+    "from janusq.analysis.vectorization import RandomwalkModel\n",
     "from janusq.analysis.fidelity_prediction import FidelityModel\n",
     "from janusq.baselines.fidelity_prediction.rb_prediction import RBModel\n",
     "from janusq.simulator.gate_error_model import GateErrorModel\n",
-    "\n",
-    "from janusq.analysis.vectorization import RandomwalkModel\n",
-    "\n",
-    "from janusq.data_objects.random_circuit import random_circuits\n",
-    "from janusq.data_objects.backend import  LinearBackend\n",
-    "\n",
     "from janusq.simulator.noisy_simulator import NoisySimulator\n",
-    "\n",
-    "from janusq.tools.ray_func import map\n"
+    "from janusq.tools.ray_func import map"
    ]
   },
   {
@@ -78,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define a 5-qubit backend\n",
+    "# define backend\n",
     "n_qubits = 3\n",
     "n_steps = 1\n",
     "n_walks = 20\n",
@@ -124,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# select 13 paths to represents sigificant interactions\n",
+    "# select paths to represents sigificant interactions\n",
     "all_paths = up_model.all_paths()\n",
     "high_error_paths = random.choices(all_paths, k = 20)\n",
     "\n",
@@ -266,6 +262,7 @@
    ],
    "source": [
     "from janusq.baselines.fidelity_prediction.rb_prediction import RBModel\n",
+    "\n",
     "rb_model = RBModel(simulator, multi_process = True)"
    ]
   },
@@ -326,8 +323,6 @@
     }
    ],
    "source": [
-    "\n",
-    "import matplotlib.pyplot as plt\n",
     "from janusq.tools.plot import plot_scatter\n",
     "\n",
     "durations = np.array([cir.duration for cir in benchmarking_circuits])\n",
