--- a/examples/ipynb/2_3_fidelity_prediction_realqc.ipynb
+++ b/examples/ipynb/2_3_fidelity_prediction_realqc.ipynb
@@ -31,7 +31,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-01-09 18:57:58,302\tINFO worker.py:1724 -- Started a local Ray instance.\n"
+      "2025-01-16 17:15:31,370\tINFO worker.py:1724 -- Started a local Ray instance.\n"
      ]
     }
    ],
@@ -47,13 +47,10 @@
     "import ray\n",
     "ray.init(log_to_driver=False)\n",
     "\n",
+    "from janusq.data_objects.backend import  GridBackend\n",
+    "from janusq.analysis.vectorization import RandomwalkModel\n",
     "from janusq.analysis.fidelity_prediction import FidelityModel\n",
     "from janusq.baselines.fidelity_prediction.rb_prediction import RBModel\n",
-    "\n",
-    "from janusq.analysis.vectorization import RandomwalkModel\n",
-    "\n",
-    "from janusq.data_objects.backend import  GridBackend\n",
-    "\n",
     "from janusq.tools.ray_func import map"
    ]
   },
@@ -74,7 +71,7 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
-      "  File \"/Users/chutianyao/Data/Quantum Technology and Device/Tutorial/HPCA 2025/JanusQ/janusq/dataset/__init__.py\", line 15, in <module>\n",
+      "  File \"/Users/chutianyao/Data/Quantum Technology and Device/Tutorial/HPCA 2025/JanusQ/examples/../janusq/dataset/__init__.py\", line 15, in <module>\n",
       "    real_qc_5bit = pickle.load(f)\n",
       "_pickle.UnpicklingError: invalid load key, 'v'.\n"
      ]
@@ -256,8 +253,7 @@
     }
    ],
    "source": [
-    "fidelity_model.plot_path_error()\n",
-    "pass"
+    "fidelity_model.plot_path_error()"
    ]
   },
   {
@@ -294,7 +290,7 @@
    "outputs": [],
    "source": [
     "rb_fidelities = np.array(map(lambda circuit: RBModel.get_rb_fidelity(circuit, fidelity_1q_rb, fidelity_2q_rb), test_circuits))\n",
-    "janusct_fidelities = np.array(map(lambda circuit: fidelity_model.predict_circuit_fidelity(circuit), test_circuits))\n"
+    "janusct_fidelities = np.array(map(lambda circuit: fidelity_model.predict_circuit_fidelity(circuit), test_circuits))"
    ]
   },
   {
@@ -332,7 +328,6 @@
     }
    ],
    "source": [
-    "\n",
     "from janusq.tools.plot import plot_scatter\n",
     "\n",
     "durations = np.array([cir.duration for cir in test_circuits])\n",
