update chocoq demo

--- a/examples/ipynb/6_2_constrained_binary_optimization_large.ipynb
+++ b/examples/ipynb/6_2_constrained_binary_optimization_large.ipynb
@@ -14,24 +14,9 @@
     "\n",
     "[1]: https://ieeexplore.ieee.org/document/TBD\n",
     "\n",
-    "Corresponding to Table 1 in the original paper, but with the Choco-Q* part omitted."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Corresponding to Table 1 in the original paper, but with the Choco-Q* part omitted."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For the full-scale program, refer to `/implementations/2_table_all_scale.py`. Since the runtime for all scales in the paper is relatively long (about one day in our 128-threads CPU), it is recommended to run it in the background. You can use the following command under `/implementations/` directory:\n",
+    "Corresponding to Table 1 in the original paper, but with the Choco-Q* part omitted.\n",
     "\n",
-    "```bash\n",
-    "nohup python3 2_table_all_scale.py > 2_table_all_scale.output 2>&1 &\n"
+    "For the large-scale program, refer to `../data/chocoq_examples/evaluate.py`. Since the runtime for all scales in the paper is relatively long (about one day in our 128-threads CPU), it is recommended to run it in the background."
    ]
   },
   {
